ref #90 - fixing NamedPreparedStatement && unit test